--- a/src/app/components/pokemon/pokemon.component.html
+++ b/src/app/components/pokemon/pokemon.component.html
@@ -17,14 +17,14 @@
 
           <div class="d-flex flex-column">
 
-            <span class="articles">Height</span>
+            <span class="articles">Altura</span>
             <span class="number1">{{pokemon.height}}</span>
 
           </div>
 
           <div class="d-flex flex-column">
 
-            <span class="followers">Weight</span>
+            <span class="followers">Ancho</span>
             <span class="number2">{{pokemon.weight}}</span>
 
           </div>
@@ -32,7 +32,7 @@
 
           <div class="d-flex flex-column">
 
-            <span class="rating">Base Experience</span>
+            <span class="rating">Experiencia</span>
             <span class="number3">{{pokemon.base_experience}}</span>
 
           </div>
@@ -40,9 +40,6 @@
         </div>
 
         <div class="button mt-2 d-flex flex-row align-items-center">
-          <!-- Sprites <br>
-          <button class="btn btn-sm btn-outline-primary w-100" (click)="beforeSprite()">Anterior</button>
-          <button class="btn btn-sm btn-primary w-100 ml-2" (click)="nextSprite">Siguiente</button> -->
 
         </div>
 
