--- a/src/app/contador/hijo/hijo.component.html
+++ b/src/app/contador/hijo/hijo.component.html
@@ -13,6 +13,6 @@
 
 <div class="row text-center">
   <div class="col">
-  <app-nieto [contador]="contador" (contadorCambio)="resetNieto($event)"></app-nieto>
+  <!--<app-nieto [contador]="contador" (contadorCambio)="resetNieto($event)"></app-nieto>-->
   </div>
 </div>
